--- a/react-theory/src/App.module.scss
+++ b/react-theory/src/App.module.scss
@@ -3,18 +3,15 @@
 }
 
 .App-logo {
+  animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+$color: #282c34;
 
 .App-header {
-  background-color: #282c34;
+  background-color: $color;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
